--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,9 +1,20 @@
 html, body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 0;
+  padding: 0;
 }
 
 p {
   font-size: 16px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
 
 code {
@@ -12,6 +23,11 @@ code {
   font-size: 85%;
   background-color: rgba(27, 31, 35, 0.05);
   border-radius: 3px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-transform: uppercase;
+  text-decoration: underline;
 }
 
 .container {
@@ -24,4 +40,10 @@ code {
   .container {
     width: 750px;
   }
+}
+
+div.main-content {
+  margin-left: 16.5rem;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
