--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,3 +1,42 @@
 nav.sidebar {
   position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 16.5rem;
+  border-right: 1px solid lightgray;
+}
+
+nav.sidebar ul {
+  padding-left: 20px;
+}
+
+nav.sidebar ul a {
+  line-height: 30px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+nav.sidebar ul a:hover,
+nav.sidebar ul a.active {
+  color: #009bff;
+}
+
+nav.sidebar ul.chapters {
+  padding-left: 0;
+  padding: 10px;
+}
+
+nav.sidebar div.sidebar-title {
+  font-size: 14px;
+  font-weight: bold;
+  text-decoration: underline;
+  padding: 10px 0;
+  width: 100%;
+  text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-transform: uppercase;
+  text-decoration: underline;
 }
