--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,7 +5,10 @@ html, body {
 }
 
 p {
-  font-size: 16px;
+  margin-top: 0px;
+  margin-bottom: 42px;
+  font-size: 1.3em;
+  line-height: 1.4em;
 }
 
 ul {
@@ -25,6 +28,11 @@ code {
   border-radius: 3px;
 }
 
+h1 {
+  font-weight: normal;
+  font-size: 40px;
+}
+
 .container {
   padding-right: 15px;
   padding-left: 15px;
@@ -33,7 +41,7 @@ code {
 }
 @media (min-width: 1061px) {
   .container {
-    width: 750px;
+    width: 680px;
   }
 }
 
