--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,8 +5,8 @@ html, body {
 }
 
 p {
-  margin-top: 0px;
-  margin-bottom: 42px;
+  margin-top: 42px;
+  margin-bottom: 0px;
   font-size: 1.3em;
   line-height: 1.4em;
 }
@@ -16,7 +16,7 @@ ul {
 }
 
 a {
-  color: black;
+  color: #009bff;
   text-decoration: none;
 }
 
@@ -34,6 +34,20 @@ h1 {
   font-size: 40px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 30px;
+  margin-bottom: 0px;
+}
+
+h1 + p,
+h2 + p,
+h3 + p,
+h4 + p,
+h5 + p,
+h6 + p {
+  margin-top: 6px;
+}
+
 .container {
   padding-right: 15px;
   padding-left: 15px;
@@ -49,4 +63,15 @@ h1 {
 div.main-content {
   margin-left: 16.5rem;
   padding-bottom: 2em;
+}
+
+div.chapter li {
+  font-size: 1.3em;
+  margin-bottom: 14px;
+}
+
+div.chapter ul,
+div.chapter ol {
+  margin-top: 30px;
+  margin-bottom: 0px;
 }
