--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -31,6 +31,35 @@ code {
   line-height: 1.5;
 }
 
+pre {
+  padding: 16px;
+  overflow: auto;
+  background-color: #f6f8fa;
+  border-radius: 3px;
+  line-height: 1.5;
+}
+
+pre code {
+  display: inline;
+  padding: 0;
+  margin: 0;
+  overflow: visible;
+  line-height: inherit;
+  word-wrap: normal;
+  background-color: initial;
+  font-size: 1.3em;
+  border: 0;
+  bottom: 0;
+}
+
+pre + p {
+  margin-top: 0;
+}
+
+pre[class="language-text"] {
+  background-color: #fdf6e3;
+}
+
 h1 {
   font-weight: normal;
   font-size: 40px;
