Added more draft content to Randomness section

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -81,3 +81,8 @@ div.chapter ol {
   margin-top: 30px;
   margin-bottom: 0px;
 }
+
+.MJXc-display {
+  margin-top: 42px !important;
+  margin-bottom: 0px !important;
+}
