--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -130,3 +130,13 @@ table, th, td {
 th, td {
   padding: 5px;
 }
+
+@media print {
+  .no-print, .no-print * {
+    display: none;
+  }
+
+  div.main-content {
+    margin-left: 0;
+  }
+}
