--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,7 @@ html, body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
 }
 
 hr {
@@ -96,8 +97,16 @@ h6 + p {
 }
 
 div.main-content {
+  height: calc(100vh - 100px);
+  margin-top: 50px;
   margin-left: 16.5rem;
+  margin-bottom: 50px;
   padding-bottom: 2em;
+  overflow-y: auto;
+}
+
+main.collapsed div.main-content {
+  margin-left: 0;
 }
 
 div.chapter li {
